--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,22 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@layer base {
+  .dark {
+    @apply bg-black;
+  }
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+html {
+  scroll-behavior: smooth;
+  scroll-padding-top: 10rem;
 }
 
-* {
-  box-sizing: border-box;
+.toolbar {
+  box-shadow: 1.1rem 0 0 #d1d5db, 2.2rem 0 0 #d1d5db;
+}
+
+.dark .toolbar {
+  box-shadow: 1.1rem 0 0 #3f3f46, 2.2rem 0 0 #3f3f46;
 }
